--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-TB9XB8N3');</script>
   <!-- End Google Tag Manager --> 
-  <base href="/">
+  <base href="/temp/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
